<resources>
    <string name="app_name">Diploma</string>

    <string name="ok">Ок</string>
    <string name="entry">Войти</string>
    <string name="loading">Загрузка...</string>

    <string name="login">логин: </string>
    <string name="password">пароль: </string>
    <string name="schedule">Расписание занятий</string>
    <string name="call">Расписание звонков</string>
    <string name="message">Сообщение</string>
    <string name="drafts">Заметки</string>
    <string name="settings">Настройки</string>
    <string name="myname">Смагина Александра Павловна</string>
    <string name="change">Смена пароля</string>
    <string name="oldpass">Старый пароль:</string>
    <string name="oldp">старый пароль:</string>
    <string name="newpass">Новый пароль:</string>
    <string name="newp">новый пароль:</string>
    <string name="repeat">повторите:</string>
    <string name="againpass">Повторите новый пароль:</string>
    <string name="cotacts">Контакты</string>
    <string name="tutor">куратор:</string>
    <string name="chief">староста:</string>
    <string name="Save">Сохранить</string>

    <string name="firstlesson">1 пара:</string>
    <string name="secondlesson">2 пара:</string>
    <string name="thirdlesson">3 пара:</string>
    <string name="fourthlesson">4 пара:</string>
    <string name="rest">перерыв:</string>

    <string name="entyre">Уверены, что хотите выйти?</string>

    <string name="forstudwnts">Уважаемые студенты! При утере пароля или логина свяжитесь с куратором
        для восстановления доступа.</string>
    <string name="studs">Уважаемые студенты! Просим вас соблюдать собординацию!</string>









    <string name="sozd">Создайте свою заметку!</string>
    <string name="message_nastya">Добрый день! Скоро пришлю диплом</string>

    <string name="vieru">Виеру Анастасия Николаевна</string>
    <string name="messa">напишите преподавателю!</string>
    <string name="f_zametk">моя первая заметка :)</string>
    <string name="hello">Hello, world!</string>


    <string name="Sergay">Адышкин Сергей Сергеевич</string>

    <string name="one">9:00 - 10:40</string>
    <string name="rest1">10:40 - 10:55</string>

    <string name="two">10:55 - 12:45</string>
    <string name="rest2">12:45 - 13:05</string>

    <string name="tree">13:05 - 14:50</string>
    <string name="rest3">14:50 - 15:05</string>

    <string name="four">15:05 - 16:45</string>
    <string name="rest4">16:45 - 16:55</string>

</resources>